--- a/index.html
+++ b/index.html
@@ -1,8 +1,21 @@
-<div id="main">
-    <!--this is a comment-->
-    This is my personal website.
-    <button class="subpage">press </button>
-    <p> My self-introduction is one sentence.</p>
-    <img src="me.png" />
-</div>
+<html>
+    <head>
+    
+        <link href="style.css" rel="stylesheet" />
+    </head>
+    <body>
+        <div id="main">
+            <!--this is a comment-->
+            This is my personal website.
+            <button class="subpage">press </button>
+            <p> My self-introduction is one sentence.</p>
+            <img src="me.png" />
+        </div>
+    </body>
 
+</html>
+
+
+
+
+ 
