--- a/index.html
+++ b/index.html
@@ -7,10 +7,15 @@
 </head>
 
 <body>
+
+    <h1>This is a title</h1>
+
+
     <div id="main">
         <!--this is a comment-->
         This is my personal website.
         <button class="subpage">press </button>
+        <button id="cv" class="subpage"> cv </button>
         <p> My self-introduction is one sentence.</p>
         <img src="me.png" />
     </div>
@@ -26,13 +31,13 @@
     </div>
     
     <div class="grid-container">
-        <div class="grid-item1">1  </div>
+        <div id= "mywork" class="grid-item1"> 1  </div>
         <div class="grid-item2">2 </div>
         <div class="grid-item3">3 </div>
     </div>
 
-
-
+    
+    <script src="code.js">  </script>
 </body>
 
 </html>
