--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
         This is my personal website.
         <button class="subpage">press </button>
         <button id="cv" class="subpage"> cv </button>
+        <button id="exhibition" class="subpage"> My work </button>
         <p> My self-introduction is one sentence.</p>
         <img src="me.png" />
     </div>
