--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     </div>
 
     <div class = "box">
-        <div>One</div>
+        <div id = "1">One</div>
         <div>Two</div>
         <div>Three
             <br> first line
